--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,19 @@ jobs:
             distribution: "temurin"
             cache: 'gradle'
 
+        - name: application-secret.yml 생성
+          env:
+            APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+          run: |
+            echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
+
+        - name: .env 파일 생성
+          env:
+            ENV_FILE: ${{ secrets.ENV_FILE }}
+          run: |
+            echo "$ENV_FILE" > .env
+        
+
         - name: Grant execute permission for gradlew
           run: chmod +x gradlew
 
